fix: Correct alignment of header/hero section of page

--- a/style.css
+++ b/style.css
@@ -6,16 +6,19 @@
 Blue section starts 
 */
 
+.section {
+  padding: 0px 15%;
+}
+
 .section--dark-blue {
   background-color: #1F2937;
 }
 
 .header {
   display: flex;
-  width: 100vw;
   justify-content: space-between;
-  align-items: center;
-  margin-bottom: 70px;
+  padding-top: 40px;
+  padding-bottom: 100px;
 }
 
 .header__logo {
@@ -36,8 +39,14 @@ Blue section starts
 
 .hero {
   display: flex;
-  flex-wrap: wrap;
-  padding: 20px 190px;
+  justify-content: space-between;
+  padding-bottom: 100px;
+}
+
+.hero__container {
+  display: flex;
+  flex-direction: column;
+  width: 40%;
 }
 
 .hero__heading {
@@ -58,7 +67,7 @@ Blue section starts
 .hero__image {
   background-color: gray;
   color: white;
-  width: 475px;
+  width: 40%;
   display: flex;
   justify-content: center;
   align-items: center;
